# pluginproof

./: .gitignore  CONTRACT.md  LICENSE  PLAN.md  README.md  demo_golden.json  gui.py  pyproject.toml
.github/workflows/: pluginproof.yml
assets/: devpost_banner.html  gui.html  report_shell.html  video_assets.html  yt_thumbnail.html
ci/: golden-biquad.json
pluginproof/: baseline.py  cli.py  contract.py  diagnose.py  gui.py  host.py  measurements.py  report.py  signals.py
pluginproof/fixtures/: biquad.py
scripts/: package_windows.ps1
submission/: DEVPOST.md  VIDEO_SCRIPT.md
tests/: test_baseline.py  test_cli.py  test_gui.py  test_host.py  test_measurements.py  test_report.py
